[project]

name = "doppio"
authors = [
    { name = "Hussain Nagaria", email = "hussainbhaitech@gmail.com" }
]
description = "A dream."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "Click~=8.2.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# REQUIRED for Bench compatibility
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
